# thesis_vm_dmp

./: .gitignore
analysis/: fetch_kernel_log.py
benchmark/io_uring_benchmark/: CMakeLists.txt  UringBenchmark.cpp  UringBenchmark.h  main.cpp  make_flamegraph.sh  run.sh
benchmark/scripts/: perf_iou.sh  perf_syscall.sh
benchmark/syscall_benchmark/: CMakeLists.txt  SyscallBenchmark.cpp  SyscallBenchmark.h  main.cpp  perf.data  perf_syscall.sh  run.sh
benchmark/vfio_benchmark/: CMakePresets.json  VFIOBenchmark.cpp  VFIOBenchmark.h  main.cpp  out.folded  perf.data  run.sh
eBPF_module/: Makefile  hello.bpf.c
io_uring_benchmark/: CMakeLists.txt  UringBenchmark.h  main.cpp
linux-source-6.1/drivers/misc/minimal/: Makefile  minimal_driver.c
log_driver/: Makefile  logmodule.c  main.c  main.cpp  perf.data  toggle.sh  trace.h  traceevents
logmodule/: Makefile  logmodule.c  toggle.sh
perfset/: perf_iou.sh  perf_syscall.sh
vfio_benchmark/: CMakeLists.txt  VFIOBenchmark.cpp  VFIOBenchmark.h  main.cpp  make_flamegraph.sh  run.sh  strace_output.txt
